adicionando itens na lista conforme o usuário entra com algum valor no input

--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <title>To-do tracker</title>
 </head>
 <body>
+    <!-- título da página -->
     <h1 id="title">To-do tracker</h1>
-    
+
+    <!-- campo para receber o to-do -->
+    <form>
+        <input type="text" id="user-todo" placeholder="New to-do" required>
+    </form>
+
+    <!-- subtítulo -->
     <h2 id="todo-header">To-dos</h2>
-    <ul>
-        <li>List item 1</li>
-        <li>List item 2</li>
-        <li>List item 3</li>
-    </ul>
+
+    <!-- lista com os to-dos -->
+    <ul></ul>
+    <!-- botão para limpar a lista -->
+    <button id="clear">Clear all</button>
     
     <script src="main.js"></script>
 </body>
