--- a/index.html
+++ b/index.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>To-do tracker</title>
 </head>
 <body>
-    <!-- título da página -->
-    <h1 id="title">To-do tracker</h1>
+    <section>
+        <!-- título da página -->
+        <h1 id="title">.·°☆ ♡•*~ To-do tracker .·°☆ ♡•*~ </h1>
 
-    <!-- campo para receber o to-do -->
-    <form>
-        <input type="text" id="user-todo" placeholder="New to-do" required>
-    </form>
+        <div class="container">
+            <!-- campo para receber o to-do -->
+            <form>
+                <input type="text" id="user-todo" placeholder="New to-do" required>
+                <span>press enter!!!</span>
+            </form>
 
-    <!-- subtítulo -->
-    <h2 id="todo-header">To-dos</h2>
+            <!-- subtítulo -->
+            <h2 id="todo-header">To-dos</h2>
 
-    <!-- lista com os to-dos -->
-    <ul></ul>
-    <!-- botão para limpar a lista -->
-    <button id="clear">Clear all</button>
-    
+            <!-- lista com os to-dos -->
+            <ul></ul>
+            <!-- botão para limpar a lista -->
+            <button id="clear">Clear all</button>
+        </div>
+    </section>
+       
     <script src="main.js"></script>
 </body>
 </html>
